--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.10.0",
+    "compute-lcm": "^1.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
